--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
 <body>
     <div class="content">
     <input class="label" type="text" id="display" value="0">
-   <button class="btn">C</button>
-   <button class="btn com" value="%">%</button> 
-   <button class="btn">←</button> 
-   <button class="btn btnOp com" value="/">/</button> 
-   <button class="btn num com" value="7">7</button> 
-   <button class="btn num com" value="8">8</button> 
-   <button class="btn num com" value="9">9</button> 
-   <button class="btn btnOp com" value="*">*</button> 
-   <button class="btn num com" value="4">4</button> 
-   <button class="btn num com" value="5">5</button> 
-   <button class="btn num com" value="6">6</button> 
-   <button class="btn btnOp com" value="-">-</button> 
-   <button class="btn num com" value="1">1</button> 
-   <button class="btn num com" value="2">2</button> 
-   <button class="btn num com" value="3">3</button> 
-   <button class="btn btnOp com" value="+">+</button> 
-   <button class="btn num btn0 com" value="0">0</button> 
-   <button class="btn num com" value=".">.</button> 
-   <button class="btn btnEq">=</button> 
+   <button class="btn btn0" value="backSpace">←</button> 
+   <button class="btn" value="Clear">C</button>
+   <button class="btn btnOp" value="/">/</button> 
+   <button class="btn" value="7">7</button> 
+   <button class="btn" value="8">8</button> 
+   <button class="btn" value="9">9</button> 
+   <button class="btn btnOp" value="*">*</button> 
+   <button class="btn" value="4">4</button> 
+   <button class="btn" value="5">5</button> 
+   <button class="btn" value="6">6</button> 
+   <button class="btn btnOp" value="-">-</button> 
+   <button class="btn" value="1">1</button> 
+   <button class="btn" value="2">2</button> 
+   <button class="btn" value="3">3</button> 
+   <button class="btn btnOp" value="+">+</button> 
+   <button class="btn  btn0" value="0">0</button> 
+   <button class="btn" value=".">.</button> 
+   <button class="btn btnEq" value="=">=</button> 
   </div>     
 </div> 
 </div>
